--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-
 /html
 /script
-/data/traffic_data.db
-/data/compteurs.csv
-
+/data/
 
